// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle 1`] = `
"// minibundle generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));

const _$_modules = {
  \\"/foo.js\\": (_$_exports) => {
    console.log(\\"eval foo once\\");
    _$_exports.default = \\"foo$default\\";
    _$_exports.b = \\"b\\";
    _$_exports.a = \\"a\\";
    return _$_exports;
  },
  \\"/bar.js\\": (_$_exports) => {
    const { default: foo } = _$_import(\\"/foo.js\\");

    console.log(\\"eval bar once\\");
    _$_exports.default = \\"bar$\\" + foo;
    return _$_exports;
  },
};

// -- entry --

const { default: foo, a: a, b: c } = _$_import(\\"/foo.js\\");

const { default: bar } = _$_import(\\"/bar.js\\");

export const x: number = c;
export default 1;
console.log(foo, bar);
"
`;

exports[`bundle 2`] = `
"// minibundle generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));

const _$_modules = {};

// -- entry --

console.log(\\"eval foo once\\");
export default \\"foo$default\\";
export const b = \\"b\\";
export const a = \\"a\\";
"
`;

exports[`bundle 3`] = `
"// minibundle generate
const _$_exported = {};
const _$_import = (id) =>
  _$_exported[id] || _$_modules[id]((_$_exported[id] = {}));

const _$_modules = {
  \\"/foo.js\\": (_$_exports) => {
    console.log(\\"eval foo once\\");
    _$_exports.default = \\"foo$default\\";
    _$_exports.b = \\"b\\";
    _$_exports.a = \\"a\\";
    return _$_exports;
  },
};

// -- entry --

const { default: foo } = _$_import(\\"/foo.js\\");

console.log(\\"eval bar once\\");
export default \\"bar$\\" + foo;
"
`;
